WebCore/html/HTMLCanvasElement.h
@@ -28,7 +28,6 @@
 #ifndef HTMLCanvasElement_h
 #define HTMLCanvasElement_h
 
-#include "CanvasSurface.h"
 #include "FloatRect.h"
 #include "HTMLElement.h"
 #include "IntSize.h"
@@ -43,6 +42,7 @@ class CanvasContextAttributes;
 class CanvasRenderingContext;
 class GraphicsContext;
 class HTMLCanvasElement;
+class ImageBuffer;
 class IntSize;
 
 class CanvasObserver {
@@ -54,16 +54,22 @@ public:
     virtual void canvasDestroyed(HTMLCanvasElement*) = 0;
 };
 
-class HTMLCanvasElement : public HTMLElement, public CanvasSurface {
+class HTMLCanvasElement : public HTMLElement {
 public:
     static PassRefPtr<HTMLCanvasElement> create(Document*);
     static PassRefPtr<HTMLCanvasElement> create(const QualifiedName&, Document*);
     virtual ~HTMLCanvasElement();
 
+    void setObserver(CanvasObserver* observer) { m_observer = observer; }
+
+    // Attributes and functions exposed to script
+    int width() const { return size().width(); }
+    int height() const { return size().height(); }
+
+    const IntSize& size() const { return m_size; }
+
     void setWidth(int);
     void setHeight(int);
-
-    CanvasRenderingContext* getContext(const String&, CanvasContextAttributes* attributes = 0);
 
     void setSize(const IntSize& newSize)
     { 
@@ -76,16 +82,33 @@ public:
         reset();
     }
 
-    virtual void willDraw(const FloatRect&);
+    CanvasRenderingContext* getContext(const String&, CanvasContextAttributes* attributes = 0);
+
+    String toDataURL(const String& mimeType, const double* quality, ExceptionCode&);
+    String toDataURL(const String& mimeType, ExceptionCode& ec) { return toDataURL(mimeType, 0, ec); }
+
+    // Used for rendering
+    void willDraw(const FloatRect&);
 
     void paint(GraphicsContext*, const IntRect&);
 
-    void setObserver(CanvasObserver* observer) { m_observer = observer; }
+    GraphicsContext* drawingContext() const;
 
     CanvasRenderingContext* renderingContext() const { return m_context.get(); }
 
-    RenderBox* renderBox() const { return HTMLElement::renderBox(); }
-    RenderStyle* computedStyle() { return HTMLElement::computedStyle(); }
+    ImageBuffer* buffer() const;
+
+    IntRect convertLogicalToDevice(const FloatRect&) const;
+    IntSize convertLogicalToDevice(const FloatSize&) const;
+    IntPoint convertLogicalToDevice(const FloatPoint&) const;
+
+    const SecurityOrigin& securityOrigin() const;
+    void setOriginTainted() { m_originClean = false; }
+    bool originClean() const { return m_originClean; }
+
+    CSSStyleSelector* styleSelector();
+
+    AffineTransform baseTransform() const;
 
 #if ENABLE(3D_CANVAS)    
     bool is3D() const;
@@ -106,13 +129,28 @@ private:
 
     void reset();
 
-    bool m_rendererIsCanvas;
+    void createImageBuffer() const;
+
+    void setSurfaceSize(const IntSize&);
+    bool hasCreatedImageBuffer() const { return m_hasCreatedImageBuffer; }
+
+    CanvasObserver* m_observer;
+
+    IntSize m_size;
 
     OwnPtr<CanvasRenderingContext> m_context;
-    CanvasObserver* m_observer;
+
+    bool m_rendererIsCanvas;
 
     bool m_ignoreReset;
     FloatRect m_dirtyRect;
+
+    float m_pageScaleFactor;
+    bool m_originClean;
+
+    // m_createdImageBuffer means we tried to malloc the buffer.  We didn't necessarily get it.
+    mutable bool m_hasCreatedImageBuffer;
+    mutable OwnPtr<ImageBuffer> m_imageBuffer;
 };
 
 } //namespace
